# smtpserver

./: .gitignore  Cargo.toml  README.md  compose.yaml
args/src/: lib.rs
maildb/: Cargo.toml
maildb/src/: lib.rs
pop3server/: Cargo.toml
pop3server/src/: main.rs  pop3.rs
smtp/: Cargo.toml
smtp/src/: lib.rs
smtprelay/: Cargo.toml
smtprelay/src/: emailqueue.rs  main.rs
smtpserver/: Cargo.toml
smtpserver/src/: email.rs  maildb.rs  main.rs  smtp.rs
src/: email.rs  main.rs  smtp.rs
