[package]
name = "smtprelay"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { version = "0.11.1", features = ["resolv", "resolv-sync"] }
maildb = {path = "../maildb"}
rusqlite = "0.38.0"
smtp = {path = "../smtp"}
args = {path = "../args"}
rustls = "0.23.37"
webpki-roots = "1.0.6"
rustls-pki-types = "1.14.0"
